--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: grey;
+    background-color: grey;
 }
 header{
     text-align: center;
@@ -12,13 +12,13 @@ header{
 }
 
 #barry{
-    length: 400px;
+    height: 300px;
     width:400px;
     
 }
 
 #form{
-    length: 400px;
+    height: 300px;
     width:400px;
 }
 footer{
