--- a/style.css
+++ b/style.css
@@ -15,12 +15,15 @@ header{
 #barry{
     height: 300px;
     width:400px;
+    padding: 10px;
     
 }
 
 #form{
     height: 300px;
     width:400px;
+    float: right;
+    padding: 10px;
 }
 footer{
     text-align: center;
