--- a/suply/style.css
+++ b/suply/style.css
@@ -1,14 +1,9 @@
-h2{
-    text-align: center;
-    font-size: 60px;
-    color:black;
-    
-}
-p{
-    text-align: center;
-    font-size: 45px;
-}
+
 
 h1{
     text-align: center;
+}
+
+body{
+    background-color: grey;
 }
