--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header{
     text-align: center;
     color: black;
     font-size: 75px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     border-style: solid;
     border-width: 5px;
     border-color:black;
