--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
     border-style: solid;
     border-width: 5px;
     border-color:black;
-    background-color:#28a745;
+    background-color:#007bff;
 }
 
 #barry{
