--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,11 @@ h1{
 }
 
 body{
-    background-color: grey;
+    background-color: ;
 }
 
+
+.map-frame {
+    width: 100%;
+    min-height: 350px;
+}
