--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: grey;
+    background-color: whitesmoke;
 }
 header{
     text-align: center;
@@ -9,20 +9,21 @@ header{
     border-style: solid;
     border-width: 5px;
     border-color:black;
-    background-color:#28a745;
+    background-color:#28a745
 }
 
 #barry{
     height: 300px;
     width:400px;
     padding: 10px;
+    align-items: center;
     
 }
 
 #form{
     height: 300px;
     width:400px;
-    float: right;
+    align-items: center ;
     padding: 10px;
 }
 footer{
@@ -30,3 +31,6 @@ footer{
     font-size: 25px;
 }
 
+h1{
+    color: #28a745;
+}
