--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,4 @@
-h2{
-    text-align: center;
-    font-size: 60px;
-    color:black;
-    
-}
-p{
-    text-align: center;
-    font-size: 45px;
-}
+
 
 h1{
     text-align: center;
@@ -17,8 +8,14 @@ body{
    
 }
 
+h2{
+    font-family: 'Libre Baskerville', serif;
+    text-decoration: underline;
+}
+
 
 .map-frame {
     width: 100%;
     min-height: 350px;
 }
+
